# M100_autocontrol

./: README.md
Guidance-SDK-ROS-master/src/: GuidanceNode.cpp  GuidanceNode.cpp~
dji_sdk/include/dji_sdk/: dji_drone.h~
dji_sdk/launch/: sdk_manifold.launch  sdk_osx.launch
dji_sdk_demo/: CMakeCache.txt  CMakeLists.txt  package.xml
dji_sdk_demo/catkin_generated/: generate_cached_setup.py  setup_cached.sh
dji_sdk_demo/devel/: setup.sh
dji_sdk_demo/src/: client.cpp  client.cpp~  send.cpp  send.h  zy.cpp  zy.cpp~  zy.h  zy.h~
opencv/: CMakeLists.txt  CMakeLists.txt~  package.xml
opencv-by-guidance/: CMakeLists.txt
opencv-by-guidance/msg/: Center.msg~
opencv-by-guidance/src/: main.cpp  main.cpp~
opencv/src/: detection.cpp  main.cpp  main.cpp~
startup/: CMakeLists.txt  package.xml
startup/launch/: startup.launch  startup.launch~
